--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -28,7 +28,7 @@
                 <img src="{{ MEDIA_URL }}nutrition.jpg" alt="" width="595" />
                 <div class="some-text">
                     <h5>Welcome to Love Fitness</h5>
-                    <h2>Smash all your fitness goals</h2>
+                    <h2 class="secondary-heading">Nutrition</h2>
                     <input type="submit" class="btn btn-light rounded-3 text-uppercase" value="Shop Now" />
                 </div>
             </div>
@@ -38,7 +38,7 @@
                 <img src="{{ MEDIA_URL }}equipment.jpg" alt="" width="595" />
                 <div class="some-text">
                     <h5>Welcome to Love Fitness</h5>
-                    <h2>Smash all your fitness goals</h2>
+                    <h2 class="secondary-heading">Equipment</h2>
                     <input type="submit" class="btn btn-light rounded-3 text-uppercase" value="Shop Now" />
                 </div>
             </div>
@@ -48,7 +48,7 @@
                 <img src="{{ MEDIA_URL }}apparel.jpg" alt="" width="595" />
                 <div class="some-text">
                     <h5>Welcome to Love Fitness</h5>
-                    <h2>Smash all your fitness goals</h2>
+                    <h2 class="secondary-heading">Apparel</h2>
                     <input type="submit" class="btn btn-light rounded-3 text-uppercase" value="Shop Now" />
                 </div>
             </div>
