--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -7,7 +7,7 @@
                 Shop
             </button>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <li><a href="/products/?category=shorts,tops_t-shirts?gender=men" class="dropdown-item">Men</a></li>
+                <li><a href="/products/?category=shorts,tops_t-shirts" class="dropdown-item">Men</a></li>
                 <li><a href="/products/?category=sports_bra,leggings" class="dropdown-item">Women</a></li>
                 <li><a href="/products/?category=nutrition" class="dropdown-item">Nutrition</a></li>
                 <li><a href="/products/?category=fitness_equipment" class="dropdown-item">Fitness Equipment</a></li>
