--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load view_breadcrumbs %}
 <!doctype html>
 <html lang="en">
 
@@ -26,6 +27,19 @@
     {% endblock %}
     {% block extra_css %}
     {% endblock %}
+
+    {% block breadcrumbs %}
+    {% render_breadcrumbs %}
+    {# Optionally provide a custom template e.g {% render_breadcrumbs "view_breadcrumbs/bootstrap5.html" %} #}
+    {% endblock %}
+
+    <!-- {% if breadcrumbs %}
+    <div class="container">
+        {% include "dynamic_breadcrumbs/breadcrumbs.html" with breadcrumbs=breadcrumbs%}
+    </div>
+    {% endif %} -->
+
+
 
     {% block corejs %}
     <!-- Javascript -->
