Add badge border

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -86,7 +86,7 @@
                                 alt="{{ product.name }}">
                         </a>
                         {% endif %}
-                        <div class="card-body text-center">
+                        <div class="card-body text-left">
                             <p class="text-white fw-bold">{{ product.name }}</p>
                         </div>
                         <div class="card-footer pt-0 border-0 text-left">
