--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -54,14 +54,9 @@
                         <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
                         {% else %}
                         <small class="text-black">No Rating</small>
-                        {% endif %} {% if request.user.is_superuser %}
-                        <small class="ml-3">
-                            <a href="{% url 'edit_product' product.id %}">Edit</a> |
-                            <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
-                        </small>
                         {% endif %}
                         <!-- Products description -->
-                        <p class="mt-3 fw-bold text-black">{{ product.description }}</p>
+                        <p class="fw-bold text-black">{{ product.description }}</p>
                         <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
                             {% csrf_token %}
                             <div class="form-row">
@@ -80,7 +75,7 @@
                                 {% endif %}
                                 <!-- Product quantity -->
                                 <div class="col-12">
-                                    <p class="mt-3"><strong>Quantity:</strong></p>
+                                    <p class=""><strong>Quantity:</strong></p>
                                     <div class="form-group w-50">
                                         <div class="input-group">
                                             <div class="input-group-prepend">
@@ -108,29 +103,50 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="col{% if s %}-12 mt-2{% endif %}">
-                                    <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 mt-5">
-                                        <span class="icon">
-                                            <i class="fas fa-chevron-left"></i>
-                                        </span>
-                                        <span class="text-uppercase">Keep Shopping</span>
-                                    </a>
-                                    <input type="submit" class="btn btn-success rounded-0 text-uppercase mt-5"
-                                        value="Add to Bag" />
+                                <div class="col">
+                                    <div class="d-grid gap-2 {% if s %} {% endif %} mt-3">
+                                        <a href="{% url 'products' %}" class="btn btn-primary">
+                                            <span class="icon">
+                                                <i class="fas fa-chevron-left"></i>
+                                            </span>
+                                            <span class="text-uppercase">Keep Shopping</span>
+                                        </a>
+                                        <input type="submit" class="btn btn-success rounded-5 text-uppercase"
+                                            value="Add to Bag" />
+                                    </div>
+                                    <input type="hidden" name="redirect_url" value="{{ request.path }}" />
+                                    {% endwith %}
                                 </div>
-                                <input type="hidden" name="redirect_url" value="{{ request.path }}" />
-                                {% endwith %}
-                            </div>
                         </form>
+                    </div>
+                    {% if request.user.is_superuser %}
+                    <div class="row">
+                        <div class="col">
+                            <div class="card w-100 border border-danger text-center mt-4">
+                                <div class="card-body">
+                                    <h6 class="card-title text-bold text-danger text-uppercase text-center fs-6">
+                                        Product
+                                        Maintenance Only
+                                    </h6>
+                                    <div class="d-grid gap-2">
+                                        <a href="{% url 'edit_product' product.id %}" class="btn btn-secondary"
+                                            type="button">Edit</a>
+                                        <a href="{% url 'delete_product' product.id %}" class="btn btn-danger"
+                                            type="button">Delete</a>
+                                        {% endif %}
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-{% endblock %}
-<!-- Postload Javascript -->
-{% block postloadjs %}
-{{ block.super }}
-{% include 'products/includes/quantity_input.html' %}
-{% endblock %}
+
+    {% endblock %}
+    <!-- Postload Javascript -->
+    {% block postloadjs %}
+    {{ block.super }}
+    {% include 'products/includes/quantity_input.html' %}
+    {% endblock %}
