--- a/templates/base.html
+++ b/templates/base.html
@@ -62,7 +62,7 @@
             <ul class="list-inline list-unstyled text-center text-lg-right my-0">
 
                 <!-- Favourites -->
-                <li class="list-inline-item">
+                <!-- <li class="list-inline-item">
                     <a class="{% if favourites_count %} font-weight-bold{% else %}text-black{% endif %} nav-link"
                         href="{% url 'view_product_favourites' %}">
                         <div class="text-center">
@@ -80,7 +80,7 @@
                         </div>
                     </a>
                 </li>
-            </ul>
+            </ul> -->
         </div>
 
         <!-- Mobile and main nav area -->
