--- a/static/css/base.css
+++ b/static/css/base.css
@@ -10,6 +10,20 @@
     border: none !important;
 }
 
+.card:hover {
+    transform: scale(1.05);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, .12), 0 4px 8px rgba(0, 0, 0, .06);
+    transition-duration: 2s, 1s;
+}
+
+.product-name,
+.product-price {
+    font-family: exo;
+}
+
+
+}
+
 html {
     height: 100%;
 }
