--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -12,7 +12,7 @@
 
 {% block content %}
 <section>
-    <div class="container-fluid mb-5">
+    <div class="container-fluid mb-5 px-0">
         <div class="row">
             <div class="col-xl-6 col-lg-6 col-md-6">
                 <img src=" {{ MEDIA_URL }}exercise_1.jpg" alt="" class="img-fluid">
