--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -28,7 +28,7 @@
         </div>
         <div class="col">
             <div class="product-details-container mb-5 mt-md-5">
-                <h4 class="mb-2 fw-bold text-black">{{ product.name }}</h4>
+                <h4 class="mb-2 fw-bold text-black cta-text">{{ product.name }}</h4>
                 <div class="pricing" style="display: flex;">
                     <p class="lead mb-2 text-left fw-bold text-black">£{{ product.price }}</p>
                     {% if is_product_in_favourites %}
