--- a/templates/includes/bag-is-empty.html
+++ b/templates/includes/bag-is-empty.html
@@ -1,3 +1,7 @@
-<div class="col">
-    <img src="{{ MEDIA_URL }}shopping-trolley.png" alt="" height="200">
+<div class="continer">
+    <div class="row">
+        <div class="col">
+            <img src="{{ MEDIA_URL }}shopping-trolley.png" alt="" height="200">
+        </div>
+    </div>
 </div>
