Add primary and secondary headings

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -16,6 +16,12 @@
     box-shadow: 0 10px 20px rgba(0, 0, 0, .12), 0 4px 8px rgba(0, 0, 0, .06);
 }
 
+.primary-heading,
+.secondary-heading {
+    font-family: exo;
+    letter-spacing: 2px;
+}
+
 .product-name,
 .product-price {
     font-family: exo2;
