--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -3,49 +3,49 @@
 
 {% block page_header %}
 <!--Main product container -->
-    <div class="container header-container">
-        <div class="row">
-            <div class="col"></div>
-        </div>
+<div class="container header-container">
+    <div class="row">
+        <div class="col"></div>
     </div>
+</div>
 {% endblock %}
 
 {% block content %}
 <!-- Overlay white background -->
-    <div class="overlay"></div>
-    <!-- Main Add Products Container -->
-    <div class="container">
-        <div class="row">
-            <div class="col-12 col-md-6 mt-4 mx-auto">
-                <hr>
-                <h2 class="logo-font mb-4 text-center text-black">Product Management</h2>
-                <h5 class="text-muted text-center">Add a Product</h5>
-                <hr>
-            </div>
-        </div>
-        <!-- Add Products Form -->
-        <div class="row">
-            <div class="col-12 col-md-6 mx-auto">
-                <form method="POST" action="{% url 'add_product' %}" class="form mb-2" enctype="multipart/form-data">
-                    {% csrf_token %}
-                    {% for field in form %}
-                        {% if field.name != 'image' %}
-                            {{ field | as_crispy_field }}
-                        {% else %}
-                            {{ field }}
-                        {% endif %}
-                    {% endfor %}
-                    <div class="d-grid gap-2 col-6 mx-auto">
-                        <a class="btn btn-danger rounded-0" href="{% url 'products' %}">Cancel</a>
-                        <button class="btn btn-success rounded-0" type="submit">Add Product</button>
-                    </div>
-                </form>
-            </div>            
+<div class="overlay"></div>
+<!-- Main Add Products Container -->
+<div class="container">
+    <div class="row">
+        <div class="col-12 col-md-6 mt-4 mx-auto">
+            <hr>
+            <h2 class="primary-heading mb-4 text-center text-uppercase">Product Management</h2>
+            <h5 class="secondary-heading text-center text-uppercase">Add a Product</h5>
+            <hr>
         </div>
     </div>
+    <!-- Add Products Form -->
+    <div class="row">
+        <div class="col-12 col-md-6 mx-auto">
+            <form method="POST" action="{% url 'add_product' %}" class="form mb-2" enctype="multipart/form-data">
+                {% csrf_token %}
+                {% for field in form %}
+                {% if field.name != 'image' %}
+                {{ field | as_crispy_field }}
+                {% else %}
+                {{ field }}
+                {% endif %}
+                {% endfor %}
+                <div class="d-grid gap-2 col-6 mx-auto">
+                    <a class="btn btn-danger rounded-0" href="{% url 'products' %}">Cancel</a>
+                    <button class="btn btn-success rounded-0" type="submit">Add Product</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 {% endblock %}
 <!-- Postload Javascipt -->
 {% block postloadjs %}
-    {{ block.super }}
-    <script src="{% static 'products/js/products.js' %}"></script>}
+{{ block.super }}
+<script src="{% static 'products/js/products.js' %}"></script>}
 {% endblock %}
