--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -9,9 +9,9 @@
 
 {% load crispy_forms_tags %}
 <hr>
-<h2 class="logo-font mb-4 text-center text-black mb-4">{% trans "Sign Up" %}</h2>
+<h2 class="primary-heading mb-4 text-center text-black mb-4">{% trans "Sign Up" %}</h2>
 
-<p class="small text-muted text-center">{% blocktrans %}Already have an account? Then please <a
+<p class="secondary-heading small text-muted text-center">{% blocktrans %}Already have an account? Then please <a
     href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
 <hr>
 
