Add margin to carousel text

--- a/templates/base.html
+++ b/templates/base.html
@@ -95,22 +95,21 @@
             </nav>
         </div>
         <!-- Information Banner -->
-        <div class="container-fluid mb-2">
+        <div class="container-fluid mb-2 px-0">
             <div class="row text-center delivery-info">
                 <div class="col">
                     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <p>Free Delivery</p>
+                                <p class="carousel-text">Free Delivery</p>
 
                             </div>
                             <div class="carousel-item">
-                                <p>Free Delivery 1</p>
+                                <p class="carousel-text">Free Delivery 1</p>
 
                             </div>
                             <div class="carousel-item">
-                                <p>Free Delivery 2</p>
-
+                                <p class="carousel-text">Free Delivery 2</p>
                             </div>
                         </div>
                     </div>
