--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
 {% block content %}
-<div class="container header-container">
+<div class="container-fluid header-container">
     <div class="overlay"></div>
     <div class="row">
-        <div class="col-12 col-md-6 col-md-3 offset-md-5 mt-4">
+        <div class="col">
             <div class="allauth-form-inner-content mb-4">
                 {% block inner_content %}
                 {% endblock %}
