--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,8 @@
 
     {% endblock %}
     {% block extra_css %}
-    <link rel="stylesheet" href="{% static 'css/carousel.css' %}" type="text/css">
+    <link rel="stylesheet" href="https://ci-ms4-lovefitness.s3.eu-west-2.amazonaws.com/static/css/base.css"
+        type="text/css">
     {% endblock %}
 
     {% block corejs %}
