Update Home.css URL to AWS

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -5,8 +5,8 @@
 <div class="container header-container"></div>
 {% endblock %}
 {% block extra_css %}
-<link rel="stylesheet" href="{% static 'home/css/home.css' %}" type="text/css" />
-<link rel="stylesheet" href="{% static 'css/carousel.css' %}" type="text/css">
+<link rel="stylesheet" href="https://ci-ms4-lovefitness.s3.eu-west-2.amazonaws.com/static/home/css/home.css"
+    type="text/css" />
 {% endblock %}
 
 
