--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -64,7 +64,6 @@
 
 
 {% endblock %}
-<!-- Postload Javascript -->
+Postload Javascript
 {% block postloadjs %}
-<!-- <script src="{% static 'home/js/carousel.js' %}"></script> -->
 {% endblock %}
