Add toast.js AWS url

--- a/templates/base.html
+++ b/templates/base.html
@@ -223,7 +223,7 @@
                 </div>
     </footer>
     {% block postloadjs %}
-    <script src="{% static 'js/toast.js' %}" type="text/css"></script>
+    <script src="https://ci-ms4-lovefitness.s3.eu-west-2.amazonaws.com/static/js/toast.js" type="text/css"></script>
     {% endblock %}
 </body>
 
