--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -52,7 +52,7 @@
     <ul class="navbar-nav mx-auto">
         <a class="navbar-brand" href="/">
             <div class="logo-image">
-                <img src=" {{ MEDIA_URL }}logo.png" height="50" />
+                <img src="https://ci-ms4-lovefitness.s3.eu-west-2.amazonaws.com/media/logo.png" height="50" />
             </div>
         </a>
     </ul>
