--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -54,7 +54,7 @@
         </div>
         <div class="col">
             <div class="box">
-                <img src="{% static 'media/apparel.jpg %}" alt="" width="610" />
+                <img src="https://ci-ms4-lovefitness.s3.eu-west-2.amazonaws.com/media/apparel.jpg" alt="" width="610" />
                 <div class="some-text">
                     <h5>Welcome to Love Fitness</h5>
                     <h2 class="secondary-heading">Apparel</h2>
