Changed image URL

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -28,7 +28,7 @@
 
 {% static "media/apparel.jpg" %}" alt="" width="610">
 
-<img src="{% static "media/apparel.jpg" %}" alt="My image" width="610">
+<!-- <img src="{% static "media/apparel.jpg" %}" alt="My image" width="610"> -->
 
 <div class="container-fluid mb-5">
     <div class="row text-center">
