--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -55,7 +55,7 @@
         </div>
         <div class="col">
             <div class="box">
-                <img src="https://ci-ms4-lovefitness.s3.eu-west-2.amazonaws.com/media/apparel.jpg" alt="" width="610" />
+                <img src="{{ MEDIA_URL }} apparel.jpg" alt="" width="610" />
                 <div class="some-text">
                     <h5>Welcome to Love Fitness</h5>
                     <h2 class="secondary-heading">Apparel</h2>
