--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -44,7 +44,7 @@
         </div>
         <div class="col">
             <div class="box">
-                <img src="https://ci-ms4-lovefitness.s3.eu-west-2.amazonaws.com/media/equipment.jpg" alt=""
+                <img src="https://lovefitness.s3.eu-west-2.amazonaws.com/media/equipment.jpg" alt=""
                     width="610" />
                 <div class="some-text">
                     <h5>Welcome to Love Fitness</h5>
