Update AWS URL for new S3 bucket

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -5,7 +5,7 @@
 <div class="container header-container"></div>
 {% endblock %}
 {% block extra_css %}
-<link rel="stylesheet" href="https://ci-ms4-lovefitness.s3.eu-west-2.amazonaws.com/static/home/css/home.css"
+<link rel="stylesheet" href="https://lovefitness.s3.eu-west-2.amazonaws.com/static/home/css/home.css"
     type="text/css" />
 {% endblock %}
 
@@ -15,7 +15,7 @@
     <div class="container-fluid px-0">
         <div class="row">
             <div class="col-xl-6">
-                <img src=" {{ MEDIA_URL }}exercise_1.jpg" alt="" class="img-fluid">
+                <img src="https://lovefitness.s3.eu-west-2.amazonaws.com/media/exercise_1.jpg" alt="" class="img-fluid">
             </div>
             <div class="col-xl-6" id="cta-text">
                 <h5>Welcome to Love Fitness</h5>
@@ -26,15 +26,11 @@
     </div>
 </section>
 
-{% static "media/apparel.jpg" %}" alt="" width="610">
-
-<img src="{% static "media/apparel.jpg" %}" alt="My image" width="610">
-
 <div class="container-fluid mb-5">
     <div class="row text-center">
         <div class="col">
             <div class="box">
-                <img src="{{ MEDIA_URL }}nutrition.jpg" alt="" width="610" />
+                <img src="https://lovefitness.s3.eu-west-2.amazonaws.com/media/nutrition.jpg" alt="" width="610" />
                 <div class="some-text">
                     <h5>Welcome to Love Fitness</h5>
                     <h2 class="secondary-heading">Nutrition</h2>
@@ -55,7 +51,7 @@
         </div>
         <div class="col">
             <div class="box">
-                <img src="{{ MEDIA_URL }} apparel.jpg" alt="" width="610" />
+                <img src="https://lovefitness.s3.eu-west-2.amazonaws.com/media/apparel.jpg" alt="" width="610" />
                 <div class="some-text">
                     <h5>Welcome to Love Fitness</h5>
                     <h2 class="secondary-heading">Apparel</h2>
