--- a/templates/base.html
+++ b/templates/base.html
@@ -20,11 +20,11 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"
         type="text/css" />
     <!-- User style css -->
-    <link rel="stylesheet" href="https://ci-ms4-lovefitness.s3.eu-west-2.amazonaws.com/static/css/base.css"
+    <link rel="stylesheet" href="https://lovefitness.s3.eu-west-2.amazonaws.com/static/css/base.css"
         type="text/css">
     <!-- Favicon -->
     <link rel="icon" type="image/png"
-        href="https://ci-ms4-lovefitness.s3.eu-west-2.amazonaws.com/media/favicon/favicon.ico" />
+        href="https://lovefitness.s3.eu-west-2.amazonaws.com/media/favicon/favicon.ico" />
 
     {% endblock %}
     {% block extra_css %}
