Remove unwanted html

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" shrink-to-fit=no />
-    <base href="/" />
+
     {% endblock %}
     {% block extra_meta %}
     {% endblock %}
@@ -20,11 +20,9 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"
         type="text/css" />
     <!-- User style css -->
-    <link rel="stylesheet" href="https://lovefitness.s3.eu-west-2.amazonaws.com/static/css/base.css"
-        type="text/css">
+    <link rel="stylesheet" href="https://lovefitness.s3.eu-west-2.amazonaws.com/static/css/base.css" type="text/css">
     <!-- Favicon -->
-    <link rel="icon" type="image/png"
-        href="https://lovefitness.s3.eu-west-2.amazonaws.com/media/favicon/favicon.ico" />
+    <link rel="icon" type="image/png" href="https://lovefitness.s3.eu-west-2.amazonaws.com/media/favicon/favicon.ico" />
 
     {% endblock %}
     {% block extra_css %}
