Set Debug to development

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -30,7 +30,7 @@
     <div class="row text-center">
         <div class="col">
             <div class="box">
-                <img src="{{ MEDIA_URL }}/nutrition.jpg" alt="" width="610" />
+                <img src="https://lovefitness.s3.eu-west-2.amazonaws.com/media/nutrition.jpg" alt="" width="610" />
                 <div class="some-text">
                     <h5>Welcome to Love Fitness</h5>
                     <h2 class="secondary-heading">Nutrition</h2>
