--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -150,5 +150,5 @@
 <!-- Javascript -->
 {% block postloadjs %}
 {{ block.super }}
-<script src="https://ci-ms4-lovefitness.s3.eu-west-2.amazonaws.com/static/products/js/products.js"></script>
+<script src="https://lovefitness.s3.eu-west-2.amazonaws.com/static/products/js/products.js"></script>
 {% endblock %}
