--- a/templates/base.html
+++ b/templates/base.html
@@ -92,26 +92,26 @@
             </nav>
         </div>
         <!-- Information Banner -->
-        <div class="container-fluid mb-2 px-0">
-            <div class="row text-center delivery-info">
-                <div class="col">
-                    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <p class="carousel-text">Free Delivery</p>
+        {% comment %} <div class="container-fluid mb-2 px-0"> {% endcomment %}
+            {% comment %} <div class="row text-center delivery-info"> {% endcomment %}
+                {% comment %} <div class="col"> {% endcomment %}
+                    {% comment %} <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel"> {% endcomment %}
+                        {% comment %} <div class="carousel-inner"> {% endcomment %}
+                            {% comment %} <div class="carousel-item active"> {% endcomment %}
+                                {% comment %} <p class="carousel-text">Free Delivery</p> {% endcomment %}
 
-                            </div>
-                            <div class="carousel-item">
-                                <p class="carousel-text">Free Delivery 1</p>
+                            {% comment %} </div> {% endcomment %}
+                            {% comment %} <div class="carousel-item"> {% endcomment %}
+                                {% comment %} <p class="carousel-text">Free Delivery 1</p> {% endcomment %}
 
-                            </div>
-                            <div class="carousel-item">
-                                <p class="carousel-text">Free Delivery 2</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+                            {% comment %} </div> {% endcomment %}
+                            {% comment %} <div class="carousel-item"> {% endcomment %}
+                                {% comment %} <p class="carousel-text">Free Delivery 2</p> {% endcomment %}
+                            {% comment %} </div> {% endcomment %}
+                        {% comment %} </div> {% endcomment %}
+                    {% comment %} </div> {% endcomment %}
+                {% comment %} </div> {% endcomment %}
+            {% comment %} </div> {% endcomment %}
     </header>
     <!-- Toast messages -->
     {% if messages %}
