--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Exo:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Exo+2:wght@600&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;500&display=swap');
 
 /* --- Global styling --- */
 .navbar {
@@ -25,6 +25,7 @@
 .product-name,
 .product-price {
     font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
 }
 
 
