--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -8,7 +8,7 @@
             </button>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                 <li><a href="/products/?category=shorts,tops_t-shirts" class="dropdown-item">Men</a></li>
-                <li><a href="/products/?category=sports_bra,leggings,bodysuits,shorts" class="dropdown-item">Women</a></li>
+                <li><a href="/products/?category=sports_bra,leggings,bodysuits,shorts_women" class="dropdown-item">Women</a></li>
                 <li><a href="/products/?category=nutrition" class="dropdown-item">Nutrition</a></li>
                 <li><a href="/products/?category=fitness_equipment" class="dropdown-item">Fitness Equipment</a></li>
             </ul>
