Add categories to All Products

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -23,7 +23,7 @@
             </a>
             {% endfor %}
             <a class="category-badge text-decoration-none"
-                href="{% url 'products' %}?category=sports_bra,leggings,shorts,tops_t-shirts,sports_nutrition,fitness_equipment{{ c.name }}">
+                href="{% url 'products' %}?category=sports_bra,leggings,shorts,shorts_women,bodysuits,tops_t-shirts,sports_nutrition,fitness_equipment{{ c.name }}">
                 <span class="p-2 mt-2 badge badge-white badge-border logo-font rounded-5">All
                     Products</span>
             </a>
