Update font styles

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -23,7 +23,8 @@
 }
 
 .product-name,
-.product-price {
+.product-price,
+.product_description {
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
 }
